devices/vsock: add async support for vsock stream
Add nonblock operations for virtio-vsock device.

Implement `AsyncRead/AsyncWrite` for `VsockStream`.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/src/devices/vsock/Cargo.toml
+++ b/src/devices/vsock/Cargo.toml
@@ -5,6 +5,7 @@ license = "BSD-2-Clause-Patent"
 edition = "2021"
 
 [dependencies]
+async_io = { path = "../../async/async_io", optional = true }
 atomic_refcell = "0.1.7"
 byteorder = { version = "1.0", default-features = false }
 cfg-if = "1.0"
@@ -21,6 +22,7 @@ td-uefi-pi = { path = "../../../deps/td-shim/td-uefi-pi" }
 
 [features]
 default = ["virtio/tdcall", "virtio-vsock"]
+async = ["async_io"]
 vmcall-vsock = []
 virtio-vsock = []
 fuzz = []
