migtd: add timeout future
Set timeout for network operations.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/src/migtd/Cargo.toml
+++ b/src/migtd/Cargo.toml
@@ -16,6 +16,7 @@ anyhow = { version = "1.0.68", default-features = false }
 attestation = { path = "../attestation", default-features = false }
 cc-measurement = { path = "../../deps/td-shim/cc-measurement"}
 crypto = { path = "../crypto" }
+futures-util = { version = "0.3.17", default-features = false, optional = true }
 lazy_static = { version = "1.0", features = ["spin_no_std"] }
 log = { version = "0.4.13", features = ["release_max_level_off"] }
 pci = { path="../devices/pci" }
@@ -44,7 +45,7 @@ td-benchmark = { path = "../../deps/td-shim/devtools/td-benchmark", default-feat
 
 [features]
 default = ["tdx"]
-async = ["crypto/async", "vsock/async", "async_io", "async_runtime"]
+async = ["crypto/async", "async_io", "async_runtime", "futures-util", "vsock/async"]
 cet-shstk = ["td-payload/cet-shstk"]
 coverage = ["minicov"]
 main = []
