--- a/tools/migtd-policy-generator/Cargo.toml
+++ b/tools/migtd-policy-generator/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
+async-std = { version = "1.6.0", default-features = false }
 clap = { version = "4.0", features = ["derive"] }
-curl = "0.4.44"
+futures = "0.3.30"
 serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
+surf = "2.3.2"
